--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "crypto": "^1.0.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "nestjs-cls": "^6.1.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
