--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "create-permissions": "ts-node -r tsconfig-paths/register src/script/create-permissions.ts",
+    "create-role": "ts-node -r tsconfig-paths/register src/script/create-role.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
