--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.9",
     "@types/mqtt": "^0.0.34",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.15.6",
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
@@ -43,6 +44,7 @@
     "lodash": "^4.17.21",
     "mqtt": "^5.14.1",
     "nestjs-cls": "^6.1.0",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
